callEnd Api, Swagger Updated, deductedFromWallert HardCoded 5rs set for each call its up to as per seconds
